src/snapshots/tptp__tests__tfx_unitary_formula-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Variable(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
