src/snapshots/tptp__tests__tfx_unitary_term-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Defined(
    Number(
        Integer(
            Integer(
                "123",
            ),
        ),
    ),
)
