src/snapshots/tptp__tests__tfx_unitary_term-7.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Logic(
    Unitary(
        Atomic(
            Defined(
                DefinedAtomic(
                    Constant(
                        DefinedConstant(
                            DefinedFunctor(
                                AtomicDefinedWord(
                                    DollarWord(
                                        LowerWord(
                                            "true",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
