src/snapshots/tptp__tests__tfx_unitary_term.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Atomic(
    Plain(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "p",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
