src/snapshots/tptp__tests__tfx_unitary_type-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Product(
    XprodType(
        [
            Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "A",
                        ),
                    ),
                ),
            ),
            Atomic(
                Variable(
                    Variable(
                        UpperWord(
                            "B",
                        ),
                    ),
                ),
            ),
        ],
    ),
)
