src/snapshots/tptp__tests__tfx_unitary_type-5.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Product(
    XprodType(
        [
            Product(
                XprodType(
                    [
                        Atomic(
                            Variable(
                                Variable(
                                    UpperWord(
                                        "A",
                                    ),
                                ),
                            ),
                        ),
                        Atomic(
                            Constant(
                                TypeConstant(
                                    TypeFunctor(
                                        Lower(
                                            LowerWord(
                                                "c",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            Product(
                XprodType(
                    [
                        Atomic(
                            Variable(
                                Variable(
                                    UpperWord(
                                        "B",
                                    ),
                                ),
                            ),
                        ),
                        Atomic(
                            Constant(
                                TypeConstant(
                                    TypeFunctor(
                                        Lower(
                                            LowerWord(
                                                "d",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
