src/snapshots/tptp__tests__tfx_variable-3.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Typed(
    TypedVariable {
        variable: Variable(
            UpperWord(
                "X",
            ),
        ),
        typ: Variable(
            Variable(
                UpperWord(
                    "A",
                ),
            ),
        ),
    },
)
