src/snapshots/tptp__tests__tfx_variable.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
Untyped(
    Variable(
        UpperWord(
            "X",
        ),
    ),
)
