src/snapshots/tptp__tests__tfx_variable_list.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
VariableList(
    [
        Untyped(
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ),
    ],
)
